--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,13 +12,22 @@
 
   <body>
     <%= render 'layouts/header' %>
-    <div class="container">
+    <div class="container main">
       <% if notice %>
           <p class="alert alert-success"><%= notice %></p>
       <% end %>
       <% if alert %>
           <p class="alert alert-danger"><%= alert %></p>
       <% end %>
+      <div class="row">
+        <div class="col-md-12">
+          <% flash.each do |name, message| %>
+            <div class="alert alert-<%= name %>">
+              <%= message %>
+            </div>
+          <% end %>
+        </div>
+      </div>
       <%= yield %>
       <%= render 'layouts/footer' %>
     </div>
