--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,8 +14,9 @@
                 <li><%= link_to "New post",  new_post_path%></li>
 
                 <li class="divider"></li>
+                <li><%= link_to "Settings", edit_user_registration_path(current_user) %></li>
                 <li>
-                  <%= link_to 'Log out', destroy_user_session_path, method: "delete" %>
+                  <%= link_to 'Log out', destroy_user_session_path, method: :delete %>
                 </li>
               </ul>
             </li>
