--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -4,10 +4,12 @@
       <h1><%= @post.title %></h1>
       <small>
         <time><%= @post.created_at.to_date.strftime("%d %B, %Y") %></time>
-        |
-        <%= link_to "Edit post", edit_post_path(@post) %>
-        |
-        <%= link_to "Delete post", post_path(@post), method: :delete, data: { confirm: 'Are you sure?'} %>
+        <% if user_signed_in? %>
+          |
+          <%= link_to "Edit post", edit_post_path(@post) %>
+          |
+          <%= link_to "Delete post", post_path(@post), method: :delete, data: { confirm: 'Are you sure?'} %>
+        <% end %>
       </small>
     </section>
     <section class="post-body">
